<project>
    <modelVersion>4.0.0</modelVersion>

    <parent>
        <groupId>sirius.stellar</groupId>
        <artifactId>stellar-aggregator</artifactId>
        <version>1.0-RC1</version>
        <relativePath>../pom.xml</relativePath>
    </parent>

    <packaging>jar</packaging>
    <artifactId>stellar-serialization-msgpack</artifactId>
    <name>Stellar :: Serialization :: MessagePack</name>
	<description>Adapter implementing support for the MessagePack binary format to avaje-jsonb.</description>

	<properties>
		<java.version>17</java.version>
	</properties>

    <dependencies>
		<dependency>
			<groupId>io.avaje</groupId>
			<artifactId>avaje-jsonb</artifactId>
			<version>${avaje-jsonb.version}</version>
		</dependency>
	</dependencies>

    <build>
        <plugins>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-jar-plugin</artifactId>
            </plugin>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-compiler-plugin</artifactId>

				<configuration>
					<release combine.self="override"/>
					<compilerArgs>
						<arg>--add-exports</arg>
						<arg>java.base/sun.nio.ch=sirius.stellar.serialization.msgpack</arg>
					</compilerArgs>
				</configuration>
            </plugin>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-source-plugin</artifactId>
            </plugin>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-javadoc-plugin</artifactId>

				<configuration>
					<excludePackageNames>
						org.msgpack.core;
						org.msgpack.core.annotations;
						org.msgpack.core.buffer;
						org.msgpack.value;
						org.msgpack.value.impl;
					</excludePackageNames>
					<additionalOptions>
						<additionalOption>--add-exports</additionalOption>
						<additionalOption>java.base/sun.nio.ch=sirius.stellar.serialization.msgpack</additionalOption>
					</additionalOptions>
				</configuration>
            </plugin>
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-surefire-plugin</artifactId>
			</plugin>
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-gpg-plugin</artifactId>
			</plugin>

			<plugin>
				<groupId>org.codehaus.gmavenplus</groupId>
				<artifactId>gmavenplus-plugin</artifactId>
			</plugin>
            <plugin>
                <groupId>org.codehaus.mojo</groupId>
                <artifactId>build-helper-maven-plugin</artifactId>

				<executions>
					<execution>
						<phase>generate-sources</phase>
						<goals>
							<goal>add-source</goal>
						</goals>

						<configuration>
							<sources>
								<source>${project.basedir}/msgpack-java/msgpack-core/src/main/java</source>
							</sources>
						</configuration>
					</execution>
				</executions>
			</plugin>
        </plugins>
    </build>
</project>